--- a/recipe/templates/recipe/meals.html
+++ b/recipe/templates/recipe/meals.html
@@ -2,39 +2,41 @@
 <title>Meals</title>
 {% endblock title %} {% block content %}
 
-<div class="container my-3">
+<div class="container my-2">
   <div class="row">
-    <div class="col-8 h-50">
-      <div class="border h-50 border-4 border-dark">
-        <img src="{{Thumb}}" alt="{{Name}}"  class="h-75"/>
+    <div class="col-7 p-4">
+      <p><span class="fw-bold h3">Instruction</span>: {{Instruction}}</p>
+      <h1>Ingredients :</h1>
+      <div class="container mt-3">
+        <div class="row">
+          {% for ing,measure in mylist %} {% if ing and ing.strip %}
+          <div class="form-check col-6 py-1">
+            <input class="form-check-input" type="checkbox" id="{{ing}}" />
+            <label class="form-check-label" for="{{ing}}">
+              {{measure}} - {{ing}}
+            </label>
+          </div>
+          {% endif %} {% endfor %}
+        </div>
       </div>
     </div>
-    <div class="col-4 h-50">
-      <p>Name : {{Name}}</p>
-      <p>Drink : {{Drink}}</p>
-      <p>Category : {{Category}}</p>
-      <p>Area : {{Area}}</p>
-      <p>Tags : {{Tags}}</p>
-      <div class="d-grid">
-        <a href="{{Youtube}}" class="btn btn-outline-dark">Youtube</a>
+    <div class="col-5 position-static">
+      <div class="card border border-2 border-dark sticky-top" style="width: 25rem" id="card1">
+        <img src="{{Thumb}}" alt="{{Name}}" class="card-img-top h-25" />
+        <div class="card-body">
+          <h5 class="text-center text-bg-dark p-1">{{Name}}</h5>
+          <div class="row mt-3 p-0">
+            <p class="card-text col-6">Drink : {{Drink}}</p>
+            <p class="card-text col-6">Category : {{Category}}</p>
+            <p class="card-text col-6">Area : {{Area}}</p>
+            <p class="card-text col-6">Tags : {{Tags}}</p>
+          </div>
+          <div class="d-grid">
+            <a href="{{Youtube}}" class="btn btn-outline-dark">Youtube</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  <div class="mt-3">
-    <p><span class="fw-bold">Instruction</span>: {{Instruction}}</p>
-  </div>
-  <div class="my-3">
-    <h1>Ingredients :</h1>
-    {% for ing,measure in mylist %} {% if ing and ing.strip %}
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="flexCheckDefault" />
-      <label class="form-check-label" for="flexCheckDefault">
-        {{measure}} - {{ing}}
-      </label>
-    </div>
-    {% endif %} {% endfor %}
-  </div>
-
 </div>
-
 {% endblock content %}
